added some logic for converting of Gltf and extensions